# tools

./: .gitignore  NHSLTemplate.xml
LLM_Skills/Claude_Syriaca-Query/: SKILL.md  query_syriaca.py  schema.md  syriaca-query.skill
Templates/NHSL/: NHSLCodeSnippets.xml  NHSLTemplate.xml  README.md  vscode-snippets.json
cbss/: README.md
cbss/json-to-tei/: config.yaml  pyproject.toml
cbss/json-to-tei/src/: json-to-tei.py
cbss/json-to-tei/src/xquery/: main.xq
cbss/utilities/: README.md  deprecate.js  uris-to-extra-field.js
cbss/zotero-dump/: README.md  config.yaml  pyproject.toml
cbss/zotero-dump/src/: dump.py  split.py
maintenance/: README.md  config.yaml  maintenance.py  pyproject.toml  work-stub-config.yaml
maintenance/xquery/: generate-uri-headwords-table.xq  nhsl-creators-from-sbd-headwords.xq  title-from-headwords.xq
quick-scripts/: work-record-stubs.xq  works-template.xml
