[project]
name = "json-to-tei"
version = "0.1.0"
description = ""
authors = [
    {name = "William L Potter",email = "44096602+wlpotter@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "json_to_tei", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
