[project]
name = "zotero-dump"
version = "0.1.0"
description = ""
authors = [
    {name = "William L Potter",email = "44096602+wlpotter@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "zotero_dump", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
