[project]
name = "zotero-dump"
version = "0.1.0"
description = "Python script for batch downloading Zotero records from the Web API using parallel requests for efficiency."
authors = [
    {name = "William L Potter",email = "44096602+wlpotter@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "zotero_dump", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
